--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
-gtag('config', '{{site.ganalytics}}');
+gtag('config', '{{site.ganalytics}}', {cookie_flags: 'SameSite=None;Secure'});
 </script>
 {% endif %}
    
